# chat

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  test.txt  tree.txt  tree1.txt
.cargo/: config.toml
crates/backup/core/: Cargo.toml
crates/backup/core/src/: lib.rs
crates/backup/core/src/archive/: mod.rs
crates/backup/core/src/encryption/: mod.rs
crates/backup/core/src/migration/: mod.rs
crates/backup/core/src/recovery-key/: mod.rs
crates/backup/core/src/restore/: mod.rs
crates/client/core/: Cargo.toml
crates/client/core/src/: lib.rs
crates/client/core/src/attachment/: mod.rs
crates/client/core/src/auth/: mod.rs
crates/client/core/src/call/: mod.rs
crates/client/core/src/contacts/: mod.rs
crates/client/core/src/messaging/: mod.rs
crates/client/core/src/notification/: mod.rs
crates/client/core/src/state/: mod.rs
crates/client/facade/: Cargo.toml
crates/client/facade/src/: lib.rs
crates/client/facade/src/commands/: mod.rs
crates/client/facade/src/dto/: mod.rs
crates/client/facade/src/events/: mod.rs
crates/crypto/api/: Cargo.toml
crates/crypto/core/: Cargo.toml
crates/crypto/key-transparency-provider/: Cargo.toml
crates/crypto/key-transparency-provider/src/: lib.rs
crates/crypto/key-transparency-provider/src/checkpoint/: mod.rs
crates/crypto/key-transparency-provider/src/consistency/: mod.rs
crates/crypto/key-transparency-provider/src/proof/: mod.rs
crates/crypto/mls-provider/: Cargo.toml
crates/crypto/opaque-provider/: Cargo.toml
crates/crypto/pairwise-provider/: Cargo.toml
crates/crypto/pairwise-provider/src/: lib.rs
crates/crypto/pairwise-provider/src/adapter/: mod.rs
crates/crypto/pairwise-provider/src/prekey/: mod.rs
crates/crypto/pairwise-provider/src/ratchet/: mod.rs
crates/ffi/android/: Cargo.toml
crates/ffi/android/src/: lib.rs
crates/foundation/common/: Cargo.toml
crates/foundation/config/: Cargo.toml
crates/foundation/config/src/: lib.rs
crates/foundation/config/src/environment/: mod.rs
crates/foundation/config/src/loader/: mod.rs
crates/foundation/config/src/validation/: mod.rs
crates/foundation/errors/: Cargo.toml
crates/foundation/telemetry/: Cargo.toml
crates/foundation/telemetry/src/: lib.rs
crates/foundation/telemetry/src/metrics/: mod.rs
crates/foundation/telemetry/src/redaction/: mod.rs
crates/foundation/telemetry/src/tracing/: mod.rs
crates/media/sframe/: Cargo.toml
crates/media/sframe/src/: lib.rs
crates/media/sframe/src/decrypt/: mod.rs
crates/media/sframe/src/encrypt/: mod.rs
crates/media/sframe/src/key-schedule/: mod.rs
crates/platform/linux/: Cargo.toml
crates/platform/linux/src/: lib.rs
docs/architecture/: dependency-rules.md
docs/development/: BASIC-CHAT-V0.md  CONFIGURATION-COMPLETE.md  MEDIA-CALLS-V0.md  START-HERE.md
frontends/linux/: package.json
frontends/windows/: package.json
scripts/bootstrap/: bootstrap-arch.sh  install-minio.sh  local-dev.sh  normalize-local-env.py
scripts/chat/: smoke-test.mjs  smoke-test.sh  start.sh  status.sh  stop.sh
scripts/database/: configure-local-passwords.sh  status.sh  verify-connections.sh
scripts/dev/: check-dependency-rules.py  check-workspace.sh  doctor.sh  security-check.sh  test-env-loader.sh
scripts/frontend/: install-linux-webrtc-arch.sh  linux-dev.sh  linux-webrtc-check.sh
scripts/infrastructure/: install-user-units.sh  start-all.sh  status-all.sh  stop-all.sh
scripts/lib/: common.sh
scripts/services/: build.sh  registry.tsv  restart.sh  start.sh  status.sh  stop.sh
services/abuse-control/: Cargo.toml
services/account-service/: Cargo.toml
services/account-service/src/: main.rs
services/account-service/src/api/: mod.rs
services/account-service/src/application/: mod.rs
services/account-service/src/domain/: mod.rs
services/account-service/src/infrastructure/: mod.rs
services/auth-service/: Cargo.toml
services/auth-service/src/: main.rs
services/auth-service/src/api/: mod.rs
services/auth-service/src/application/: mod.rs
services/auth-service/src/domain/: mod.rs
services/auth-service/src/infrastructure/: mod.rs
services/backup-service/: Cargo.toml
services/backup-service/src/: main.rs
services/call-signaling/: Cargo.toml
services/call-signaling/src/: main.rs
services/config-service/: Cargo.toml
services/contact-discovery/: Cargo.toml
services/contact-discovery/src/: main.rs
services/device-service/: Cargo.toml
services/device-service/src/: main.rs
services/diagnostic-ingest/: Cargo.toml
services/diagnostic-ingest/src/: main.rs
services/group-service/: Cargo.toml
services/group-service/src/: main.rs
services/ingress-relay/: Cargo.toml
services/ingress-relay/src/: main.rs
services/ingress-relay/src/api/: mod.rs
services/key-directory/: Cargo.toml
services/key-transparency/: Cargo.toml
services/link-preview-service/: Cargo.toml
services/link-preview-service/src/: main.rs
services/mailbox-gateway/: Cargo.toml
services/mailbox-gateway/src/: main.rs
services/mailbox-store/: Cargo.toml
services/mailbox-store/src/: main.rs
services/mailbox-store/src/api/: mod.rs
services/mailbox-store/src/application/: mod.rs
services/mailbox-store/src/domain/: mod.rs
services/mailbox-store/src/infrastructure/: mod.rs
services/object-gateway/: Cargo.toml
services/object-gateway/src/: main.rs
services/ohttp-gateway/: Cargo.toml
services/ohttp-relay/: Cargo.toml
services/ohttp-relay/src/: main.rs
services/profile-service/: Cargo.toml
services/push-router/: Cargo.toml
services/username-service/: Cargo.toml
services/username-service/src/: main.rs
tools/benchmark-runner/: Cargo.toml
tools/chaos-lab/: Cargo.toml
tools/cli-client/: Cargo.toml
tools/db-tool/: Cargo.toml
tools/devctl/: Cargo.toml
tools/key-tool/: Cargo.toml
tools/migration-tool/: Cargo.toml
tools/network-sim/: Cargo.toml
tools/packet-lab/: Cargo.toml
tools/vector-generator/: Cargo.toml
tools/xtask/: Cargo.toml
(+235 files in other folders)
