[package]
name = "chat-service-account-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-foundation-config.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
