[package]
name = "chat-service-auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-storage-server.workspace = true
chat-crypto-api.workspace = true
chat-crypto-opaque-provider.workspace = true
chat-protocol-control.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
