[package]
name = "chat-service-auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-foundation-config.workspace = true
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
serde.workspace = true
reqwest.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
