[package]
name = "chat-service-backup-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-storage-server.workspace = true
chat-backup-core.workspace = true
chat-protocol-object.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
