[package]
name = "chat-service-call-signaling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-storage-server.workspace = true
chat-media-call-core.workspace = true
chat-transport-core.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
