[package]
name = "chat-service-contact-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-storage-server.workspace = true
chat-crypto-core.workspace = true
chat-privacy-core.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
