[package]
name = "chat-service-ingress-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-transport-quic.workspace = true
chat-transport-tunnel.workspace = true
chat-protocol-cell.workspace = true
chat-privacy-strong-traffic.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
