[package]
name = "chat-service-link-preview-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-privacy-metadata.workspace = true
chat-transport-core.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
