[package]
name = "chat-service-mailbox-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-protocol-envelope.workspace = true
chat-transport-core.workspace = true
chat-privacy-sender-hiding.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
