[package]
name = "chat-service-mailbox-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-storage-server.workspace = true
chat-protocol-envelope.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
