[package]
name = "chat-service-ohttp-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-server-core.workspace = true
chat-transport-ohttp.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
