[package]
name = "chat-tool-benchmark-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-testing-test-support.workspace = true
chat-protocol-cell.workspace = true
chat-privacy-padding.workspace = true
chat-privacy-strong-traffic.workspace = true
chat-transport-core.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
