[package]
name = "chat-tool-chaos-lab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-testing-test-support.workspace = true
chat-transport-core.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
