[package]
name = "chat-tool-vector-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-crypto-api.workspace = true
chat-protocol-cell.workspace = true
chat-protocol-envelope.workspace = true
chat-protocol-object.workspace = true
chat-privacy-padding.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
