[package]
name = "chat-backup-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-foundation-common.workspace = true
chat-foundation-errors.workspace = true
chat-crypto-api.workspace = true
chat-protocol-object.workspace = true
chat-storage-core.workspace = true
bytes.workspace = true
serde.workspace = true
zeroize.workspace = true

[lints]
workspace = true
