[package]
name = "chat-client-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-foundation-common.workspace = true
chat-foundation-errors.workspace = true
chat-client-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
