[package]
name = "chat-ffi-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-client-facade.workspace = true
chat-platform-android.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
