[package]
name = "chat-foundation-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-foundation-common.workspace = true
chat-foundation-errors.workspace = true
dotenvy.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
