[package]
name = "chat-media-sframe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-foundation-common.workspace = true
chat-foundation-errors.workspace = true
chat-crypto-api.workspace = true
bytes.workspace = true
zeroize.workspace = true

[lints]
workspace = true
