[package]
name = "chat-platform-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chat-foundation-common.workspace = true
chat-foundation-errors.workspace = true
chat-platform-api.workspace = true
async-trait.workspace = true

[lints]
workspace = true
